--- a/src/main/resources/duffrd/diceroller/view/MainWindow.fxml
+++ b/src/main/resources/duffrd/diceroller/view/MainWindow.fxml
@@ -13,6 +13,7 @@
               <menus>
                 <Menu fx:id="fileMenu" mnemonicParsing="false" text="File">
                   <items>
+                        <MenuItem fx:id="switchSuiteMenuItem" mnemonicParsing="false" text="Switch To Suite" />
                         <MenuItem accelerator="F4" mnemonicParsing="false" onAction="#exit" text="Exit" />
                   </items>
                 </Menu>
@@ -25,6 +26,9 @@
                         <MenuItem fx:id="newGroupItem" mnemonicParsing="false" text="New Group" />
                         <MenuItem fx:id="renameGroupItem" mnemonicParsing="false" text="Rename Group" />
                         <MenuItem fx:id="deleteGroupItem" mnemonicParsing="false" text="Delete Group" />
+                        <SeparatorMenuItem mnemonicParsing="false" />
+                        <MenuItem fx:id="newSuiteMenuItem" mnemonicParsing="false" text="New Suite" />
+                        <MenuItem fx:id="deleteSuiteMenuItem" mnemonicParsing="false" text="Delete Suite" />
                   </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="Help">
